# lol_auto

./: .gitignore  Cargo.toml  README.md
src/: main.rs  ui.slint
